--- a/src/app/components/company/company.component.scss
+++ b/src/app/components/company/company.component.scss
@@ -4,4 +4,27 @@
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
+    height: 100%;
+}
+
+.company-logo {
+    margin-top: 25px;
+}
+
+.review-card {
+    margin-bottom: 15px;
+}
+
+.card-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.view-all-info {
+    text-align: end;
+}
+
+h2 {
+    margin-top: 25px;
 }
