--- a/src/app/components/user-profile/user-profile.component.scss
+++ b/src/app/components/user-profile/user-profile.component.scss
@@ -4,4 +4,34 @@
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
+    height: 100%;
+}
+
+.avatar-wrapper {
+    text-align: center;
+    h2 {
+        margin-top: 25px;
+    }
+}
+
+.avatar-profile {
+    margin-top: 20px;
+}
+
+.review-card-margin {
+    margin-bottom: 15px;
+}
+
+.review-card {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.review-card-content {
+    text-align: center;
+}
+
+.expand-card-info {
+    text-align: end;
 }
