background image fixes

--- a/src/app/components/company/company.component.html
+++ b/src/app/components/company/company.component.html
@@ -18,7 +18,7 @@
         </div>
         <div class="row col-sm-12 col-lg-8 col-xl-9 m-0 mt-5">
             <div *ngFor="let review of reviews"
-                 class="col-sm-12 col-xl-6">
+                 class="wrapper col-sm-12 col-xl-6">
                 <nz-card class="review-card"
                          [nzHoverable]="true"
                          [nzBordered]="true"
