--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper h-100">
     <div class="h-100 w-100 row">
         <div class="col-sm-12 col-lg-4 col-xl-3"
              class="avatar-wrapper">
@@ -16,7 +16,7 @@
 
         <div class="row col-sm-12 col-lg-8 col-xl-9 m-0 mt-5">
             <div *ngFor="let review of reviews"
-                 class="col-sm-12 col-xl-6">
+                 class=" col-sm-12 col-xl-6">
                 <nz-card class="review-card-margin"
                          [nzHoverable]="true"
                          [nzBordered]="true"
