--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,12 @@
 body {
     overflow-x: hidden;
 }
+
+.background {
+    background-image: url("assets/q.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    height: 100%;
+}
