--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,7 +1,6 @@
 <div class="wrapper h-100">
     <div class="h-100 w-100 row">
-        <div class="col-sm-12 col-lg-4 col-xl-3"
-             class="avatar-wrapper">
+        <div class="col-sm-12 col-lg-4 col-xl-3 avatar-wrapper">
             <nz-avatar nzIcon="user"
                        class="avatar-profile"
                        [nzSize]="250"
@@ -16,7 +15,7 @@
 
         <div class="row col-sm-12 col-lg-8 col-xl-9 m-0 mt-5">
             <div *ngFor="let review of reviews"
-                 class=" col-sm-12 col-xl-6">
+                 class="col-sm-12 col-xl-6">
                 <nz-card class="review-card-margin"
                          [nzHoverable]="true"
                          [nzBordered]="true"
